--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
               <div class="prod-name">Paracetamol 500mg</div>
               <div class="prod-sku">SKU: P-001</div>
               <div class="prod-meta">
-                <span class="price">$25.00</span>
+                <span class="price" data-price="25">$25.00</span>
                 <span class="stock">Stock: 10</span>
               </div>
-              <button class="btn add-to-cart">Agregar</button>
+              <button class="btn add-to-cart" data-sku="P-001" data-name="Paracetamol 500mg" data-price="25">Agregar</button>
             </div>
           </div>
 
@@ -109,10 +109,10 @@
               <div class="prod-name">Amoxicilina 500mg</div>
               <div class="prod-sku">SKU: A-010</div>
               <div class="prod-meta">
-                <span class="price">$60.00</span>
+                <span class="price" data-price="60">$60.00</span>
                 <span class="stock">Stock: 5</span>
               </div>
-              <button class="btn add-to-cart">Agregar</button>
+              <button class="btn add-to-cart" data-sku="A-010" data-name="Amoxicilina 500mg" data-price="60">Agregar</button>
             </div>
           </div>
         </div>
@@ -126,9 +126,12 @@
 
           <div class="extras">
             <h4>Extras</h4>
-            <input id="extraDesc" type="text" placeholder="Descripción (ej. Curación)" />
-            <input id="extraMonto" type="number" step="0.01" placeholder="Monto" />
-            <button id="btnAgregarExtra" class="btn">Agregar extra</button>
+            <div class="extras-row">
+              <input id="extraDesc" type="text" placeholder="Descripción (ej. Curación)" />
+              <input id="extraMonto" type="number" step="0.01" placeholder="Monto" />
+              <button id="btnAgregarExtra" class="btn">Agregar extra</button>
+            </div>
+            <ul id="extrasLista" class="list slim"></ul>
           </div>
 
           <div class="receta">
