--- a/index.html
+++ b/index.html
@@ -178,6 +178,6 @@
 </div>
 
 <!-- JS con ruta absoluta + defer -->
-<script src="/app.js?v=20251107" defer></script>
+<script src="app.js?v=20251107"></script>
 </body>
 </html>
