--- a/index.html
+++ b/index.html
@@ -1,183 +1,139 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta http-equiv="Cache-Control" content="no-store" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Farmacia DP v1</title>
-  <!-- Ruta absoluta + bust de caché -->
-  <link rel="stylesheet" href="/styles.css?v=20251107" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div class="app">
-
-  <!-- MENÚ LATERAL -->
-  <aside>
+  <aside class="sidebar">
     <div class="brand">
-      <div class="logo">💊</div>
-      <div class="title">Farmacia DP v1</div>
+      <span class="pill">💊</span>
+      <span class="title">Farmacia DP v1</span>
     </div>
-    <nav>
-      <a class="nav-btn active" data-go="dashboard">📊 Dashboard</a>
-      <a class="nav-btn" data-go="ventas">🧾 Ventas</a>
-      <a class="nav-btn" data-go="inventario">💊 Inventario</a>
-      <a class="nav-btn" data-go="bodega">🏷️ Bodega</a>
-      <a class="nav-btn" data-go="clientes">👤 Clientes</a>
-      <a class="nav-btn" data-go="historial">📜 Historial</a>
-      <a class="nav-btn" data-go="reportes">📈 Reportes</a>
-      <a class="nav-btn" data-go="config">⚙️ Configuración</a>
+    <nav class="nav">
+      <a href="#" data-go="dashboard">📊 Dashboard</a>
+      <a href="#" data-go="ventas">🧾 Ventas</a>
+      <a href="#" data-go="inventario">💊 Inventario</a>
+      <a href="#" data-go="bodega">📦 Bodega</a>
+      <a href="#" data-go="clientes">👤 Clientes</a>
+      <a href="#" data-go="historial">🧾 Historial</a>
+      <a href="#" data-go="reportes">📈 Reportes</a>
+      <a href="#" data-go="config">⚙️ Configuración</a>
     </nav>
   </aside>
 
-  <!-- PANEL -->
-  <main>
-    <!-- Topbar con super buscador + escáner -->
-    <div class="topbar">
-      <div class="h1" id="viewTitle">Dashboard</div>
-      <div class="searchWrap">
-        <input id="globalSearch" class="input" placeholder="Buscar por nombre, SKU o etiqueta…" />
-        <input id="scanInput" class="input" style="width:260px" placeholder="Apunta el lector aquí…" />
-        <button class="btn light" id="reactivarScanner">Reactivar</button>
+  <main class="main">
+    <!-- Barra superior con buscador y escáner -->
+    <header class="topbar">
+      <input id="topSearch" class="input" type="search" placeholder="Buscar por nombre, SKU o etiqueta…" />
+      <div class="scanner">
+        <label for="scannerInput">Escáner:</label>
+        <input id="scannerInput" class="input" type="text" placeholder="Apunta el lector aquí…" />
+        <button id="scannerReactivate" class="btn ghost">Reactivar</button>
       </div>
-    </div>
+    </header>
 
-    <!-- DASHBOARD -->
-    <section id="view-dashboard" class="grid cols-3">
-      <div class="card pad">
-        <div class="section-title">KPIs del día</div>
-        <div class="kpis">
-          <div class="kpi"><div class="muted">Ventas Hoy</div><div class="v" id="kpiVentas">$0.00</div></div>
-          <div class="kpi"><div class="muted">Tickets Hoy</div><div class="v" id="kpiTickets">0</div></div>
-          <div class="kpi"><div class="muted">Prod. vendidos</div><div class="v" id="kpiItems">0</div></div>
-          <div class="kpi"><div class="muted">Ticket prom.</div><div class="v" id="kpiProm">$0.00</div></div>
-        </div>
+    <!-- Vistas -->
+    <section class="view" data-view="dashboard">
+      <h1>Dashboard</h1>
+      <div class="grid kpis">
+        <div class="card"><div class="kpi-title">Ventas Hoy</div><div id="kpiVentasHoy" class="kpi">$0.00</div></div>
+        <div class="card"><div class="kpi-title">Tickets Hoy</div><div id="kpiTicketsHoy" class="kpi">0</div></div>
+        <div class="card"><div class="kpi-title">Prod. vendidos</div><div id="kpiProdHoy" class="kpi">0</div></div>
+        <div class="card"><div class="kpi-title">Ticket prom.</div><div id="kpiTicketProm" class="kpi">$0.00</div></div>
       </div>
-      <div class="card pad">
-        <div class="section-title">Alertas — Stock bajo</div>
-        <div id="alertStock" class="muted">(Vacío)</div>
-      </div>
-      <div class="card pad">
-        <div class="section-title">Alertas — Próximas caducidades</div>
-        <div id="alertCad" class="muted">(Vacío)</div>
+      <div class="grid two">
+        <div class="card"><h3>Alertas — Stock bajo</h3><div id="alertStockBajo" class="list empty">(Vacío)</div></div>
+        <div class="card"><h3>Alertas — Próximas caducidades</h3><div id="alertCad" class="list empty">(Vacío)</div></div>
       </div>
     </section>
 
-    <!-- VENTAS -->
-    <section id="view-ventas" class="hidden">
-      <div class="grid cols-3">
-        <div class="card pad" style="grid-column:1 / 3">
-          <div class="section-title">Catálogo</div>
-          <div id="productGrid" class="product-grid"></div>
+    <section class="view hidden" data-view="ventas">
+      <h1>Ventas</h1>
+      <div class="ventas-layout">
+        <div class="catalogo" id="catalogo">
+          <!-- tarjetas de producto -->
         </div>
 
-        <div class="card pad">
-          <div class="section-title">Carrito</div>
-          <div id="cart" class="cart"></div>
+        <aside class="carrito card">
+          <h2>Carrito</h2>
+          <div id="cartList" class="list empty">(Vacío)</div>
 
-          <div class="section-title">Extras</div>
-          <div class="row-gap">
-            <input id="extraDesc" class="input" placeholder="Descripción (ej. Curación)" style="flex:1; min-width:160px">
-            <input id="extraMonto" class="input" type="number" placeholder="Monto" style="width:140px">
-            <button class="btn gray" id="agregarExtra">Agregar extra</button>
+          <div class="extras">
+            <h3>Extras</h3>
+            <div class="row">
+              <input id="extraDesc" class="input" placeholder="Descripción (ej. Curación)" />
+              <input id="extraMonto" class="input" type="number" min="0" step="0.01" placeholder="Monto" />
+              <button id="btnAddExtra" class="btn">Agregar extra</button>
+            </div>
           </div>
 
-          <div class="section-title">Receta del paciente</div>
-          <input id="receta" class="file" type="file" accept="image/*,.pdf" />
+          <div class="receta">
+            <h3>Receta del paciente</h3>
+            <input id="recetaFile" type="file" accept="image/*,application/pdf" />
+          </div>
 
-          <div class="section-title">Pago</div>
-          <div class="row-gap">
-            <select id="metodoPago">
-              <option value="EFE">Efectivo</option>
-              <option value="TAR">Tarjeta</option>
-              <option value="TRA">Transferencia</option>
-              <option value="OTR">Otro</option>
-            </select>
-            <input id="refPago" class="input" placeholder="Referencia / notas (opcional)" style="flex:1;min-width:200px">
+          <div class="pago">
+            <h3>Pago</h3>
+            <div class="row">
+              <select id="paymentMethod" class="input">
+                <option value="EFE">Efectivo</option>
+                <option value="TAR">Tarjeta</option>
+                <option value="TRA">Transferencia</option>
+                <option value="OTR">Otro</option>
+              </select>
+              <input id="paymentRef" class="input" placeholder="Referencia / notas (opcional)" />
+            </div>
           </div>
 
           <div class="total">
-            <div>Total:</div>
-            <div id="total">$0.00</div>
+            <span>Total:</span>
+            <strong id="cartTotal">$0.00</strong>
           </div>
-
-          <div class="row" style="margin-top:10px">
-            <button class="btn" id="btnCobrar">Cobrar</button>
-            <button class="btn gray" id="btnVaciar">Vaciar</button>
+          <div class="row">
+            <button id="btnCobrar" class="btn primary">Cobrar</button>
+            <button id="btnVaciar" class="btn danger ghost">Vaciar</button>
           </div>
-        </div>
+        </aside>
       </div>
     </section>
 
-    <!-- INVENTARIO -->
-    <section id="view-inventario" class="hidden">
-      <div class="card pad">
-        <div class="row" style="margin-bottom:12px">
-          <div class="section-title">Inventario</div>
-          <div class="right">
-            <button class="btn light" id="btnNuevoProd">+ Producto</button>
-          </div>
-        </div>
-        <table class="table" id="tablaInv">
-          <thead>
-            <tr>
-              <th>IMG</th><th>SKU</th><th>Nombre</th><th>Etiqueta</th><th>Precio</th><th>Stock</th><th>Mín</th><th>Lotes</th><th>Cad. Próx.</th><th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-        <div class="muted" style="margin-top:8px">Nota: imágenes se guardan <b>localmente</b> en el dispositivo (no URL).</div>
+    <section class="view hidden" data-view="inventario">
+      <h1>Inventario</h1>
+      <div class="row">
+        <button id="btnNuevoProd" class="btn">+ Producto</button>
+        <input id="invSearch" class="input" placeholder="Buscar…" />
+        <select id="invFilterTag" class="input">
+          <option value="">Etiqueta (todas)</option>
+          <option value="Generico">Genérico</option>
+          <option value="Marca">Marca</option>
+          <option value="Controlado">Controlado</option>
+          <option value="Servicio">Servicio</option>
+        </select>
       </div>
+
+      <p class="note">Nota: imágenes se guardan <strong>localmente</strong> (no URL).</p>
+
+      <table class="table" id="invTable">
+        <thead>
+          <tr>
+            <th>IMG</th><th>SKU</th><th>Nombre</th><th>Etiqueta</th>
+            <th>Precio</th><th>Stock</th><th>Mín</th><th>Lotes</th><th>Cad. Próx.</th><th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </section>
 
-    <!-- Bodega / Clientes -->
-    <section id="view-bodega" class="hidden">
-      <div class="card pad"><div class="section-title">Bodega (próximo)</div><div class="muted">Moverá piezas contra solicitudes de Inventario.</div></div>
-    </section>
-    <section id="view-clientes" class="hidden">
-      <div class="card pad"><div class="section-title">Clientes (próximo)</div><div class="muted">Historial por cliente, importación, etc.</div></div>
-    </section>
-
-    <!-- HISTORIAL -->
-    <section id="view-historial" class="hidden">
-      <div class="card pad">
-        <div class="row" style="margin-bottom:8px">
-          <div class="section-title">Historial de ventas</div>
-          <div class="muted">Rango y exportación próximamente</div>
-        </div>
-        <table class="table" id="tablaHist">
-          <thead>
-            <tr><th>Folio</th><th>Fecha/Hora</th><th>Cliente</th><th>Total</th><th>Pago</th><th>Receta</th><th>Estado</th><th></th></tr>
-          </thead>
-          <tbody></tbody>
-        </table>
-      </div>
-    </section>
-
-    <!-- REPORTES -->
-    <section id="view-reportes" class="hidden">
-      <div class="card pad">
-        <div class="section-title">Resumen</div>
-        <div id="repResumen" class="grid" style="gap:6px">
-          <div>Total ventas: $0.00</div>
-          <div>Tickets: 0</div>
-          <div>Ticket promedio: $0.00</div>
-          <div>Top productos: —</div>
-          <div id="repMetodos">Por método: —</div>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONFIG -->
-    <section id="view-config" class="hidden">
-      <div class="card pad"><div class="section-title">Configuración (próximo)</div>
-        <div class="muted">Colores, datos del negocio, ticket 58 mm, respaldos.</div>
-      </div>
-    </section>
-
+    <section class="view hidden" data-view="bodega"><h1>Bodega (próximo)</h1></section>
+    <section class="view hidden" data-view="clientes"><h1>Clientes (próximo)</h1></section>
+    <section class="view hidden" data-view="historial"><h1>Historial (próximo)</h1></section>
+    <section class="view hidden" data-view="reportes"><h1>Reportes (próximo)</h1></section>
+    <section class="view hidden" data-view="config"><h1>Configuración (próximo)</h1></section>
   </main>
-</div>
 
-<!-- JS con ruta absoluta + defer -->
-<script src="app.js?v=20251107"></script>
+  <script src="app.js?v=20251107"></script>
 </body>
 </html>
