--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </aside>
 
   <main class="main">
-    <!-- Barra superior con buscador y escáner -->
+    <!-- Barra superior -->
     <header class="topbar">
       <input id="topSearch" class="input" type="search" placeholder="Buscar por nombre, SKU o etiqueta…" />
       <div class="scanner">
@@ -35,7 +35,7 @@
       </div>
     </header>
 
-    <!-- Vistas -->
+    <!-- VISTAS -->
     <section class="view" data-view="dashboard">
       <h1>Dashboard</h1>
       <div class="grid kpis">
@@ -53,10 +53,7 @@
     <section class="view hidden" data-view="ventas">
       <h1>Ventas</h1>
       <div class="ventas-layout">
-        <div class="catalogo" id="catalogo">
-          <!-- tarjetas de producto -->
-        </div>
-
+        <div class="catalogo" id="catalogo"></div>
         <aside class="carrito card">
           <h2>Carrito</h2>
           <div id="cartList" class="list empty">(Vacío)</div>
@@ -88,10 +85,7 @@
             </div>
           </div>
 
-          <div class="total">
-            <span>Total:</span>
-            <strong id="cartTotal">$0.00</strong>
-          </div>
+          <div class="total"><span>Total:</span><strong id="cartTotal">$0.00</strong></div>
           <div class="row">
             <button id="btnCobrar" class="btn primary">Cobrar</button>
             <button id="btnVaciar" class="btn danger ghost">Vaciar</button>
@@ -113,9 +107,7 @@
           <option value="Servicio">Servicio</option>
         </select>
       </div>
-
       <p class="note">Nota: imágenes se guardan <strong>localmente</strong> (no URL).</p>
-
       <table class="table" id="invTable">
         <thead>
           <tr>
@@ -134,6 +126,94 @@
     <section class="view hidden" data-view="config"><h1>Configuración (próximo)</h1></section>
   </main>
 
-  <script src="app.js?v=20251107"></script>
+  <!-- MODAL: Producto (Nuevo/Editar) -->
+  <div class="modal hidden" id="modalProd">
+    <div class="modal__backdrop" data-close="modalProd"></div>
+    <div class="modal__panel">
+      <h2 id="prodModalTitle">Producto</h2>
+      <div class="form">
+        <div class="row">
+          <div class="col">
+            <label>SKU</label>
+            <input id="fSku" class="input" />
+          </div>
+          <div class="col">
+            <label>Nombre</label>
+            <input id="fNombre" class="input" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label>Etiqueta</label>
+            <select id="fEtiqueta" class="input">
+              <option value="Generico">Genérico</option>
+              <option value="Marca">Marca</option>
+              <option value="Controlado">Controlado</option>
+              <option value="Servicio">Servicio</option>
+            </select>
+          </div>
+          <div class="col">
+            <label>Precio (venta)</label>
+            <input id="fPrecio" class="input" type="number" min="0" step="0.01"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label>Stock inicial</label>
+            <input id="fStock" class="input" type="number" min="0" step="1"/>
+          </div>
+          <div class="col">
+            <label>Stock mínimo</label>
+            <input id="fMin" class="input" type="number" min="0" step="1" value="0"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label>Imagen (desde dispositivo)</label>
+            <input id="fImg" type="file" accept="image/*"/>
+          </div>
+          <div class="col">
+            <div class="preview" id="fPreview">Sin imagen</div>
+          </div>
+        </div>
+      </div>
+      <div class="row end">
+        <button class="btn ghost" data-close="modalProd">Cancelar</button>
+        <button class="btn primary" id="btnProdGuardar">Guardar</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODAL: +Stock (lote) -->
+  <div class="modal hidden" id="modalStock">
+    <div class="modal__backdrop" data-close="modalStock"></div>
+    <div class="modal__panel">
+      <h2>Agregar stock (lote)</h2>
+      <div class="form">
+        <div class="row">
+          <div class="col">
+            <label>Lote</label>
+            <input id="sLote" class="input"/>
+          </div>
+          <div class="col">
+            <label>Caducidad</label>
+            <input id="sCad" class="input" type="date"/>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label>Piezas</label>
+            <input id="sPzas" class="input" type="number" min="1" step="1" value="1"/>
+          </div>
+        </div>
+      </div>
+      <div class="row end">
+        <button class="btn ghost" data-close="modalStock">Cancelar</button>
+        <button class="btn primary" id="btnAddLote">Agregar</button>
+      </div>
+    </div>
+  </div>
+
+  <script src="app.js?v=20251107a"></script>
 </body>
 </html>
