--- a/index.html
+++ b/index.html
@@ -1,297 +1,173 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Farmacia DP v1</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Farmacia DP — TPV + Bodega</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <aside class="sidebar">
-    <div class="brand">
-      <span class="pill">💊</span>
-      <span class="title">Farmacia DP v1</span>
-    </div>
-    <nav class="nav">
-      <a href="#" data-go="dashboard">📊 Dashboard</a>
-      <a href="#" data-go="ventas">🧾 Ventas</a>
-      <a href="#" data-go="inventario">💊 Inventario</a>
-      <a href="#" data-go="bodega">📦 Bodega</a>
-      <a href="#" data-go="clientes">👤 Clientes</a>
-      <a href="#" data-go="historial">🧾 Historial</a>
-      <a href="#" data-go="reportes">📈 Reportes</a>
-      <a href="#" data-go="config">⚙️ Configuración</a>
+    <div class="brand">Farmacia DP</div>
+    <nav>
+      <button data-tab="ventas" class="active">🛒 Ventas</button>
+      <button data-tab="inventario">📦 Inventario</button>
+      <button data-tab="bodega">🏬 Bodega</button>
+      <button data-tab="reportes">📈 Reportes</button>
+      <button data-tab="config">⚙️ Config</button>
     </nav>
   </aside>
 
   <main class="main">
-    <!-- Barra superior -->
-    <header class="topbar">
-      <input id="topSearch" class="input" type="search" placeholder="Buscar por nombre, SKU o etiqueta…" />
-      <div class="scanner">
-        <label for="scannerInput">Escáner:</label>
-        <input id="scannerInput" class="input" type="text" placeholder="Apunta el lector aquí…" />
-        <button id="scannerReactivate" class="btn ghost">Reactivar</button>
-      </div>
-    </header>
-
-    <!-- VISTAS -->
-    <section class="view" data-view="dashboard">
-      <h1>Dashboard</h1>
-      <div class="grid kpis">
-        <div class="card"><div class="kpi-title">Ventas Hoy</div><div id="kpiVentasHoy" class="kpi">$0.00</div></div>
-        <div class="card"><div class="kpi-title">Tickets Hoy</div><div id="kpiTicketsHoy" class="kpi">0</div></div>
-        <div class="card"><div class="kpi-title">Prod. vendidos</div><div id="kpiProdHoy" class="kpi">0</div></div>
-        <div class="card"><div class="kpi-title">Ticket prom.</div><div id="kpiTicketProm" class="kpi">$0.00</div></div>
-      </div>
-      <div class="grid two">
-        <div class="card"><h3>Alertas — Stock bajo</h3><div id="alertStockBajo" class="list empty">(Vacío)</div></div>
-        <div class="card"><h3>Alertas — Próximas caducidades</h3><div id="alertCad" class="list empty">(Vacío)</div></div>
-      </div>
+    <!-- KPIs -->
+    <section class="kpis">
+      <div class="kpi"><span>Ventas hoy</span><strong id="kpiHoy">$0.00</strong></div>
+      <div class="kpi"><span>Tickets</span><strong id="kpiTickets">0</strong></div>
+      <div class="kpi"><span>IVA</span><strong id="kpiIVA">0%</strong></div>
+      <div class="kpi"><span>Top ítem</span><strong id="kpiTop">—</strong></div>
     </section>
 
-    <section class="view hidden" data-view="ventas">
-      <h1>Ventas</h1>
-      <div class="ventas-layout">
-        <div class="catalogo" id="catalogo"></div>
-        <aside class="carrito card">
-          <h2>Carrito</h2>
-          <div id="cartList" class="list empty">(Vacío)</div>
-
-          <div class="extras">
-            <h3>Extras</h3>
-            <div class="row">
-              <input id="extraDesc" class="input" placeholder="Descripción (ej. Curación)" />
-              <input id="extraMonto" class="input" type="number" min="0" step="0.01" placeholder="Monto" />
-              <button id="btnAddExtra" class="btn">Agregar extra</button>
-            </div>
-          </div>
-
-          <div class="receta">
-            <h3>Receta del paciente</h3>
-            <input id="recetaFile" type="file" accept="image/*,application/pdf" />
-          </div>
-
-          <div class="pago">
-            <h3>Pago</h3>
-            <div class="row">
-              <select id="paymentMethod" class="input">
-                <option value="EFE">Efectivo</option>
-                <option value="TAR">Tarjeta</option>
-                <option value="TRA">Transferencia</option>
-                <option value="OTR">Otro</option>
-              </select>
-              <input id="paymentRef" class="input" placeholder="Referencia / notas (opcional)" />
-            </div>
-          </div>
-
-          <div class="total"><span>Total:</span><strong id="cartTotal">$0.00</strong></div>
+    <!-- VENTAS -->
+    <section id="tab-ventas">
+      <div class="ventas">
+        <div class="catalogo">
           <div class="row">
+            <input id="buscador" class="input" placeholder="Buscar nombre o SKU…">
+            <select id="filtroTipo" class="select">
+              <option value="todos">Todos</option>
+              <option value="producto">Productos</option>
+              <option value="servicio">Servicios</option>
+            </select>
+          </div>
+          <div id="gridProductos" class="grid"></div>
+        </div>
+
+        <aside class="carrito">
+          <h3>Carrito</h3>
+          <div id="lineas"></div>
+
+          <!-- EXTRAS alineados en una fila -->
+          <div class="extras">
+            <input id="extraDesc" class="input" placeholder="Descripción (ej. Curación)">
+            <input id="extraMonto" class="input" type="number" step="0.01" placeholder="$">
+            <button id="btnAddExtra" class="btn">Agregar extra</button>
+          </div>
+
+          <!-- RECETA (opcional) -->
+          <div class="bloque">
+            <label class="label">Receta del paciente (PDF/imagen):</label>
+            <input type="file" id="archivoReceta" class="input">
+          </div>
+
+          <!-- PAGO SIEMPRE VISIBLE -->
+          <div class="pago">
+            <select id="tipoPago" class="select">
+              <option value="Efectivo" selected>Efectivo</option>
+              <option value="Tarjeta">Tarjeta</option>
+              <option value="Transferencia">Transferencia</option>
+              <option value="Mixto">Mixto</option>
+            </select>
+            <input id="referenciaPago" class="input" placeholder="Referencia / notas">
+          </div>
+
+          <div id="resumen" class="resumen"></div>
+          <div class="acciones">
             <button id="btnCobrar" class="btn primary">Cobrar</button>
-            <button id="btnVaciar" class="btn danger ghost">Vaciar</button>
+            <button id="btnVaciar" class="btn ghost">Vaciar</button>
           </div>
         </aside>
       </div>
     </section>
 
-    <section class="view hidden" data-view="inventario">
-      <h1>Inventario</h1>
+    <!-- INVENTARIO (piso/mostrador) -->
+    <section id="tab-inventario" style="display:none">
       <div class="row">
-        <button id="btnNuevoProd" class="btn">+ Producto</button>
-        <input id="invSearch" class="input" placeholder="Buscar…" />
-        <select id="invFilterTag" class="input">
-          <option value="">Etiqueta (todas)</option>
-          <option value="Generico">Genérico</option>
-          <option value="Marca">Marca</option>
-          <option value="Controlado">Controlado</option>
-          <option value="Servicio">Servicio</option>
-        </select>
+        <h3>Inventario (Mostrador)</h3>
+        <button id="btnNuevoItem" class="btn">+ Nuevo</button>
       </div>
-      <p class="note">Nota: imágenes se guardan <strong>localmente</strong> (no URL).</p>
-      <table class="table" id="invTable">
+      <table class="tabla" id="tablaInventario">
         <thead>
-          <tr>
-            <th>IMG</th><th>SKU</th><th>Nombre</th><th>Etiqueta</th>
-            <th>Precio</th><th>Stock</th><th>Mín</th><th>Lotes</th><th>Cad. Próx.</th><th>Acciones</th>
-          </tr>
+          <tr><th>SKU</th><th>Nombre</th><th>Tipo</th><th>Stock Piso</th><th>Stock Bodega</th><th>Precio</th><th>Solicitar</th></tr>
         </thead>
         <tbody></tbody>
       </table>
     </section>
 
     <!-- BODEGA -->
-    <section class="view hidden" data-view="bodega">
-      <h1>Bodega</h1>
-
-      <div class="tabs">
-        <button class="tab active" data-tab="sol">Solicitudes</button>
-        <button class="tab" data-tab="mov">Historial</button>
-      </div>
-
-      <!-- Solicitudes -->
-      <div class="tabpanel" data-panel="sol">
-        <div class="row">
-          <input id="bodSearch" class="input" placeholder="Buscar por SKU, nombre o folio…" />
-          <select id="bodEstado" class="input">
-            <option value="">Estado (todos)</option>
-            <option value="Solicitado">Solicitado</option>
-            <option value="Parcial">Parcial</option>
-            <option value="Recibido">Recibido</option>
-            <option value="Cancelado">Cancelado</option>
-          </select>
+    <section id="tab-bodega" style="display:none">
+      <div class="grid2">
+        <div class="card">
+          <h3>Ingresar a Bodega</h3>
+          <div class="gridForm">
+            <input id="inSku" class="input" placeholder="SKU">
+            <input id="inNombre" class="input" placeholder="Nombre (si es nuevo)">
+            <input id="inLote" class="input" placeholder="Lote">
+            <input id="inCad" class="input" type="date" placeholder="Caducidad">
+            <input id="inCant" class="input" type="number" min="1" placeholder="Cantidad">
+            <input id="inCosto" class="input" type="number" step="0.01" placeholder="Costo (opcional)">
+            <button id="btnIngresar" class="btn primary">Ingresar</button>
+          </div>
         </div>
-        <table class="table" id="bodTable">
-          <thead>
-            <tr>
-              <th>Folio</th><th>Fecha</th><th>SKU</th><th>Producto</th>
-              <th>Solicitadas</th><th>Recibidas</th><th>Pendientes</th>
-              <th>Solicitante</th><th>Estado</th><th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
+
+        <div class="card">
+          <h3>Surtir a Inventario</h3>
+          <div class="gridForm">
+            <input id="suSku" class="input" placeholder="SKU">
+            <input id="suCant" class="input" type="number" min="1" placeholder="Cantidad">
+            <button id="btnSurtir" class="btn">Mover (FIFO cad)</button>
+          </div>
+        </div>
       </div>
 
-      <!-- Historial movimientos -->
-      <div class="tabpanel hidden" data-panel="mov">
-        <div class="row">
-          <input id="movSearch" class="input" placeholder="Buscar por SKU, lote, folio solicitud…" />
-        </div>
-        <table class="table" id="movTable">
-          <thead>
-            <tr>
-              <th>Fecha</th><th>SKU</th><th>Producto</th><th>+Pzas</th>
-              <th>Lote</th><th>Caducidad</th><th>Solicitante</th><th>Receptor</th><th>Folio Sol.</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
+      <div class="row mt">
+        <h3>Solicitudes desde Inventario</h3>
+        <button id="btnAtenderTodo" class="btn ghost">Atender todo (si alcanza)</button>
       </div>
+      <table class="tabla" id="tablaSolicitudes">
+        <thead><tr><th>ID</th><th>SKU</th><th>Nombre</th><th>Solicitado</th><th>Estado</th><th>Acción</th></tr></thead>
+        <tbody></tbody>
+      </table>
+
+      <div class="row mt"><h3>Kardex</h3></div>
+      <table class="tabla" id="tablaKardex">
+        <thead><tr><th>Fecha</th><th>SKU</th><th>Tipo</th><th>Detalle</th><th>Cant</th></tr></thead>
+        <tbody></tbody>
+      </table>
     </section>
 
-    <section class="view hidden" data-view="clientes"><h1>Clientes (próximo)</h1></section>
-    <section class="view hidden" data-view="historial"><h1>Historial (próximo)</h1></section>
-    <section class="view hidden" data-view="reportes"><h1>Reportes (próximo)</h1></section>
-    <section class="view hidden" data-view="config"><h1>Configuración (próximo)</h1></section>
+    <!-- REPORTES / CONFIG -->
+    <section id="tab-reportes" style="display:none">
+      <h3>Resumen</h3>
+      <div id="resumenReporte" class="chips"></div>
+    </section>
+
+    <section id="tab-config" style="display:none">
+      <h3>Parámetros</h3>
+      <div class="row">
+        <label class="label">IVA (%)</label>
+        <input id="iva" class="input" type="number" min="0" max="30" step="0.01" value="0">
+        <button id="btnIVA" class="btn">Aplicar</button>
+      </div>
+      <div class="row mt">
+        <button id="btnGuardar" class="btn">💾 Guardar</button>
+        <button id="btnRestaurar" class="btn ghost">⟳ Restaurar</button>
+        <button id="btnWipe" class="btn danger">🗑️ Borrar todo</button>
+      </div>
+    </section>
   </main>
 
-  <!-- MODAL: Producto (Nuevo/Editar) -->
-  <div class="modal hidden" id="modalProd">
-    <div class="modal__backdrop" data-close="modalProd"></div>
-    <div class="modal__panel">
-      <h2 id="prodModalTitle">Producto</h2>
-      <div class="form">
-        <div class="row">
-          <div class="col"><label>SKU</label><input id="fSku" class="input" /></div>
-          <div class="col"><label>Nombre</label><input id="fNombre" class="input" /></div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <label>Etiqueta</label>
-            <select id="fEtiqueta" class="input">
-              <option value="Generico">Genérico</option>
-              <option value="Marca">Marca</option>
-              <option value="Controlado">Controlado</option>
-              <option value="Servicio">Servicio</option>
-            </select>
-          </div>
-          <div class="col"><label>Precio (venta)</label><input id="fPrecio" class="input" type="number" min="0" step="0.01"/></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Stock inicial</label><input id="fStock" class="input" type="number" min="0" step="1"/></div>
-          <div class="col"><label>Stock mínimo</label><input id="fMin" class="input" type="number" min="0" step="1" value="0"/></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Imagen (desde dispositivo)</label><input id="fImg" type="file" accept="image/*"/></div>
-          <div class="col"><div class="preview" id="fPreview">Sin imagen</div></div>
-        </div>
-      </div>
-      <div class="row end">
-        <button class="btn ghost" data-close="modalProd">Cancelar</button>
-        <button class="btn primary" id="btnProdGuardar">Guardar</button>
-      </div>
-    </div>
-  </div>
+  <!-- Modal reutilizable -->
+  <dialog id="modal">
+    <form method="dialog" id="modalForm">
+      <h3 id="modalTitle">Nuevo</h3>
+      <div id="modalBody"></div>
+      <menu>
+        <button value="cancel" class="btn ghost">Cancelar</button>
+        <button value="ok" class="btn primary">Guardar</button>
+      </menu>
+    </form>
+  </dialog>
 
-  <!-- MODAL: +Stock (lote) directo en inventario -->
-  <div class="modal hidden" id="modalStock">
-    <div class="modal__backdrop" data-close="modalStock"></div>
-    <div class="modal__panel">
-      <h2>Agregar stock (lote)</h2>
-      <div class="form">
-        <div class="row">
-          <div class="col"><label>Lote</label><input id="sLote" class="input"/></div>
-          <div class="col"><label>Caducidad</label><input id="sCad" class="input" type="date"/></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Piezas</label><input id="sPzas" class="input" type="number" min="1" step="1" value="1"/></div>
-        </div>
-      </div>
-      <div class="row end">
-        <button class="btn ghost" data-close="modalStock">Cancelar</button>
-        <button class="btn primary" id="btnAddLote">Agregar</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- MODAL: Solicitar a bodega -->
-  <div class="modal hidden" id="modalReq">
-    <div class="modal__backdrop" data-close="modalReq"></div>
-    <div class="modal__panel">
-      <h2>Solicitar a bodega</h2>
-      <div class="form">
-        <div class="row">
-          <div class="col"><label>SKU</label><input id="rqSku" class="input" readonly /></div>
-          <div class="col"><label>Producto</label><input id="rqNombre" class="input" readonly /></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Piezas solicitadas</label><input id="rqPzas" class="input" type="number" min="1" step="1" value="1"/></div>
-          <div class="col"><label>Solicitante</label><input id="rqUser" class="input" placeholder="(ej. Recepción)" /></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Nota (opcional)</label><input id="rqNota" class="input" /></div>
-        </div>
-      </div>
-      <div class="row end">
-        <button class="btn ghost" data-close="modalReq">Cancelar</button>
-        <button class="btn primary" id="btnReqGuardar">Crear solicitud</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- MODAL: Recepción de bodega -->
-  <div class="modal hidden" id="modalRec">
-    <div class="modal__backdrop" data-close="modalRec"></div>
-    <div class="modal__panel">
-      <h2>Recibir de bodega</h2>
-      <div class="form">
-        <div class="row">
-          <div class="col"><label>Folio solicitud</label><input id="rcFolio" class="input" readonly/></div>
-          <div class="col"><label>SKU</label><input id="rcSku" class="input" readonly/></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Producto</label><input id="rcNombre" class="input" readonly/></div>
-          <div class="col"><label>Pendiente</label><input id="rcPend" class="input" readonly/></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Lote</label><input id="rcLote" class="input"/></div>
-          <div class="col"><label>Caducidad</label><input id="rcCad" type="date" class="input"/></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Piezas a recibir</label><input id="rcPzas" class="input" type="number" min="1" step="1" value="1"/></div>
-          <div class="col"><label>Receptor</label><input id="rcUser" class="input" placeholder="(quién recibe)"/></div>
-        </div>
-        <div class="row">
-          <div class="col"><label>Nota (opcional)</label><input id="rcNota" class="input"/></div>
-        </div>
-      </div>
-      <div class="row end">
-        <button class="btn ghost" data-close="modalRec">Cancelar</button>
-        <button class="btn primary" id="btnRecibir">Recibir</button>
-      </div>
-    </div>
-  </div>
-
-  <script src="app.js?v=20251107b"></script>
+  <script src="app.js"></script>
 </body>
 </html>
